--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="error_message">Error loading note</string>
     <string name="nothing_to_save">There is nothing to save</string>
     <string name="change_bgc">ChangeBgc</string>
+    <string name="search_placeholder">Search for title/content...</string>
 </resources>
