--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,8 @@
     <string name="nothing_to_save">There is nothing to save</string>
     <string name="change_bgc">ChangeBgc</string>
     <string name="search_placeholder">Search for title/content...</string>
+    <string name="input_title">Input Title</string>
+    <string name="new_note">New Note</string>
+    <string name="edit_note">Edit Note</string>
+    <string name="input_note_body">Input Note Body</string>
 </resources>
